--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,14 +14,14 @@
     <mat-menu #menu="matMenu" xPosition="after">
       <div (click)="$event.stopPropagation()">
         <mat-button-toggle-group multiple hideMultipleSelectionIndicator="true" (change)="onToggleChange($event)">
-          <mat-button-toggle value="option1">ONY</mat-button-toggle>
-          <mat-button-toggle value="option2">AQ20</mat-button-toggle>
-          <mat-button-toggle value="option3">NAXX</mat-button-toggle>
-          <mat-button-toggle value="option3">AQ40</mat-button-toggle>
-          <mat-button-toggle value="option3">ZG</mat-button-toggle>
-          <mat-button-toggle value="option3">K40</mat-button-toggle>
-          <mat-button-toggle value="option3">K10</mat-button-toggle>
-          <mat-button-toggle value="option3">DMF</mat-button-toggle>
+          <mat-button-toggle value="ony" [checked]=true>ONY</mat-button-toggle>
+          <mat-button-toggle value="aq20" [checked]=true>AQ20</mat-button-toggle>
+          <mat-button-toggle value="naxx" [checked]=true>NAXX</mat-button-toggle>
+          <mat-button-toggle value="aq40" [checked]=true>AQ40</mat-button-toggle>
+          <mat-button-toggle value="zg" [checked]=true>ZG</mat-button-toggle>
+          <mat-button-toggle value="k40" [checked]=true>K40</mat-button-toggle>
+          <mat-button-toggle value="k10" [checked]=true>K10</mat-button-toggle>
+          <mat-button-toggle value="dmf" [checked]=true>DMF</mat-button-toggle>
         </mat-button-toggle-group>
       </div>
     </mat-menu>
