Feat: filter ui is now bottom sheet instead of drop menu
-fix password helper pop to only appear in access request
-make text more cleared to understand

--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -11,6 +11,9 @@
       event.aq20 ||
       event.dmf ||
       event.pvp ||
+      event.k10 ||
+      event.k40 ||
+      event.es ||
       event.madness
     ) {
       <div
@@ -46,6 +49,15 @@
           }
           @if (event.naxx) {
             Naxxramas<br />
+          }
+          @if (event.k40) {
+            Karazhan (40)<br />
+          }
+          @if (event.k10) {
+            Karazhan (20)<br />
+          }
+          @if (event.es) {
+            Emerald Sanctum<br />
           }
           @if (event.zg) {
             Zul'Gurub<br />
