--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,14 @@
 <div [ngClass]="themeService.themeSignal()" class="home">
   <!--  Settings and dark mode buttons-->
   <div class="button-container">
+    <button
+      [matTooltip]="configTip"
+      mat-icon-button
+      (click)="goToConfig()"
+      [ngClass]="configClass"
+    >
+      <mat-icon>settings</mat-icon>
+    </button>
     <button [matTooltip]="gotoTip" mat-icon-button (click)="scrollToToday()">
       <mat-icon>radio_button_checked</mat-icon>
     </button>
@@ -8,53 +16,74 @@
     <!--   [ngClass]="configClass"> -->
     <!--   <mat-icon>settings</mat-icon> -->
     <!-- </button> -->
-    <button mat-icon-button [matMenuTriggerFor]="menu" [matTooltip]="configTip" [ngClass]="configClass">
-      <mat-icon>settings</mat-icon>
+    <button
+      [matTooltip]="filterTip"
+      (click)="openBottomSheet()"
+      mat-icon-button
+    >
+      <mat-icon>tune</mat-icon>
     </button>
-    <mat-menu #menu="matMenu" xPosition="after">
-      <!-- prevent clicking the buttons from closing the menu -->
-      <div (click)="$event.stopPropagation()">
-        <mat-button-toggle-group multiple hideMultipleSelectionIndicator="true" (change)="onToggleChange($event)">
-          <!-- pipe buttonStates into a keyvalue list and loop through it (buttonStes => [{key: "ony", value: true},{},{}])  -->
-          <mat-button-toggle *ngFor="let item of this.toggleService.buttonStates | keyvalue" [value]="item.key"
-            [checked]="item.value">
-            {{item.key.toUpperCase()}}
-          </mat-button-toggle>
-        </mat-button-toggle-group>
+    <ng-template #bottomSheetTemplate>
+      <div class="filter-bottom-sheet">
+        <div class="sheet-header">
+          <h3>Toggle Events</h3>
+        </div>
+
+        <div class="sheet-content">
+          <mat-button-toggle-group
+            multiple
+            hideMultipleSelectionIndicator="true"
+            (change)="onToggleChange($event)"
+          >
+            <mat-button-toggle
+              *ngFor="let item of this.toggleService.buttonOrder"
+              [value]="item.k"
+              [checked]="this.toggleService.buttonStates[item.k]"
+            >
+              <span class="btn-name">{{ item.n.toUpperCase() }}</span>
+              <span class="btn-key">{{ item.k.toUpperCase() }}</span>
+            </mat-button-toggle>
+          </mat-button-toggle-group>
+        </div>
       </div>
-    </mat-menu>
+    </ng-template>
     <button [matTooltip]="themeModTip" mat-icon-button (click)="toggleTheme()">
       <mat-icon>dark_mode</mat-icon>
     </button>
-
-
   </div>
 
   <!--  Dark curtain-->
   <div class="container">
-    <div class="dark-mode" [class.active]="state===1"></div>
+    <div class="dark-mode" [class.active]="state === 1"></div>
   </div>
 
   <!--  Top text boxes-->
   <div class="topText">
-    <h1 style="font-weight: bold;text-align: center">Everlook Calendar</h1><br />
+    <h1 style="font-weight: bold; text-align: center">Everlook Calendar</h1>
+    <br />
 
     <div class="block_container" style="margin-bottom: 20px">
-      <div style="margin-right: 7px"> Server time is now:</div>
+      <div style="margin-right: 7px">Server time is now:</div>
 
       <app-servertime></app-servertime>
     </div>
 
     <div class="block_container" style="margin-bottom: 20px">
-      <b style="font-weight: bold; margin-right: 7px;">Current ZG Edge of Madness boss:</b>
+      <b style="font-weight: bold; margin-right: 7px"
+        >Current ZG Edge of Madness boss:</b
+      >
       <app-boss></app-boss>
     </div>
 
-    <a mat-button href="" routerLink="/zgenchants" routerLinkActive="active" ariaCurrentWhenActive="page"
-      class="linkButton">Click here for
-      ZG enchants</a>
-
+    <a
+      mat-button
+      href=""
+      routerLink="/zgenchants"
+      routerLinkActive="active"
+      ariaCurrentWhenActive="page"
+      class="linkButton"
+      >Click here for ZG enchants</a
+    >
   </div>
   <app-event></app-event>
-
 </div>
