Feat: better config handling
Bring back start date change

--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -45,16 +45,16 @@
             Blackwing Lair<br />
           }
           @if (event.aq40) {
-            AQ40<br />
+            Temple of Ahn'Qiraj<br />
           }
           @if (event.naxx) {
             Naxxramas<br />
           }
           @if (event.k40) {
-            Karazhan (40)<br />
+            Tower of Karazhan<br />
           }
           @if (event.k10) {
-            Karazhan (20)<br />
+            Lower Karazhan Halls<br />
           }
           @if (event.es) {
             Emerald Sanctum<br />
@@ -63,7 +63,7 @@
             Zul'Gurub<br />
           }
           @if (event.aq20) {
-            AQ20<br />
+            Ruins of Ahn'Qiraj<br />
           }
           @if (event.dmf) {
             {{ event.dmf }}<br />
