--- a/src/app/config/config.component.scss
+++ b/src/app/config/config.component.scss
@@ -3,15 +3,51 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap-reverse;
-  height: -webkit-fill-available;
+  // height: -webkit-fill-available;
   justify-content: center;
 }
 
 .mat-mdc-form-field {
-  width: 300px;
+  width: 22rem;
   align-self: center;
   margin-block: .3rem;
+  position: relative;
+
+  &[data-changed="true"]::after {
+    content: ' *';
+    color: red;
+    font-weight: bold;
+    font-size: xxx-large;
+    position: absolute;
+    right: -3rem;
+    top: 2.2rem;
+  }
+
 }
+
+
+.mat-button-toggle-group {
+  position: relative;
+  align-self: center;
+  margin-bottom: 1.2rem;
+  //color styling in style.scss
+  overflow: unset;
+  width: 22rem;
+  gap: 0.6rem;
+  border: solid 1px #5555556e;
+
+  &[data-changed="true"]::after {
+    content: ' *';
+    color: red;
+    font-weight: bold;
+    font-size: xxx-large;
+    position: absolute;
+    right: -3rem;
+    top: -0.2rem;
+  }
+}
+
+
 
 //::ng-deep {
 //  .mdc-text-field--filled:not(.mdc-text-field--disabled) {
@@ -28,7 +64,7 @@
 
 .button-container-config {
   display: flex;
-  position: absolute;
+  // position: absolute;
   top: 0;
   gap: 10px;
   justify-content: end;
@@ -38,6 +74,7 @@
   flex-direction: row-reverse;
   font-size: large;
   //font-weight: bold;
+  padding-bottom: 7rem;
   color: #808080;
 }
 
@@ -60,13 +97,7 @@
   //background: #f5f5f5;
 }
 
-.mat-button-toggle-group {
-  align-self: center;
-  // margin-top: 1.2rem;
-  margin-bottom: 1.2rem;
-  //color styling in style.scss
 
-}
 
 .mid-section {
   display: flex;
@@ -83,6 +114,15 @@ span {
   width: 2.3px;
   background-color: #808080;
   border-radius: 100px;
+}
+
+h1 {
+  font-size: medium;
+}
+
+.asterisk {
+  color: red;
+  background-color: transparent;
 }
 
 .exitButton {
