--- a/src/app/config/config.component.scss
+++ b/src/app/config/config.component.scss
@@ -48,20 +48,6 @@
 }
 
 
-
-//::ng-deep {
-//  .mdc-text-field--filled:not(.mdc-text-field--disabled) {
-//    background-color: red;
-//  }
-//}
-.saveBtn:disabled {
-  //background-color: rgba(119, 119, 119, 0.11);
-  //scale: 1.1;
-  //width: 120%;
-  //margin-top: 100px;
-  //width: 70px;
-}
-
 .button-container-config {
   display: flex;
   // position: absolute;
@@ -103,6 +89,62 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.vetting-section {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  overflow: auto;
+  height: 70vh;
+  scrollbar-width: thin;
+  padding: 2rem;
+  // position: absolute;
+  // margin-left: 6rem;
+}
+
+.vet-holder {
+  //
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  // gap: 2rem;
+  // overflow: auto;
+  // height: 70vh;
+  // scrollbar-width: thin;
+  padding: 2rem;
+  position: absolute;
+  margin-left: 6rem;
+}
+
+.mid-vet-holder {
+  display: flex;
+  // justify-content: center;
+}
+
+.user {
+  padding: 10px 24px 10px 15px;
+  // box-shadow: 5px 10px 20px 0 #92929245;
+  border-radius: 10px;
+  height: fit-content;
+  min-width: 19rem;
+}
+
+.role-toggle {
+  width: 13rem;
+  margin-left: 1rem;
+  height: 2rem;
+  place-items: anchor-center;
+  margin-bottom: unset;
+}
+
+.user-role-header {
+  width: 5rem;
+  padding: 10px 24px 10px 15px;
+  // box-shadow: 5px 10px 20px 0 #92929245;
+  border-radius: 10px;
 }
 
 mat-button-toggle-group {
@@ -118,6 +160,7 @@ span {
 
 h1 {
   font-size: medium;
+  text-align: center;
 }
 
 .asterisk {
@@ -127,4 +170,36 @@ h1 {
 
 .exitButton {
   //scale: 0.8;
+}
+
+
+
+
+@media only screen and (max-width: 1600px) {
+  .mid-vet-holder {
+    flex-direction: column;
+  }
+
+  .vet-holder {
+    margin-left: unset;
+  }
+}
+
+@media only screen and (max-width: 1300px) {
+  .mid-vet-holder {
+    flex-direction: column;
+  }
+
+  .vet-holder {
+    margin-left: unset;
+    position: unset;
+    padding: unset;
+  }
+
+  .vetting-section {
+    flex-direction: row;
+    height: unset;
+    width: clamp(18rem, 89vw, 77rem);
+    max-width: fit-content;
+  }
 }
